--- a/hide_data.env
+++ b/hide_data.env
@@ -1,2 +1,2 @@
-EMAIL_SENDER ="YOUR_EMAIL_HERE"
-EMAIL_PASSWORD="YOUR_EMAIL_PASSWORD"
+EMAIL_SENDER ="cyberninjas020@gmail.com"
+EMAIL_PASSWORD="txcmjzczlghszqwl"
