--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,144 +1,30 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-# More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
-
-
-
-name: Build and deploy Python app to Azure Web App - bolcom
-
-
+name: Deploy to Azure Web App
 
 on:
-
   push:
-
     branches:
-
-      - master
-
-  workflow_dispatch:
-
-
+      - master # Of main, afhankelijk van je standaard branch naam
 
 jobs:
-
-  build:
-
+  build-and-deploy:
     runs-on: ubuntu-latest
-
-
-
     steps:
+    - uses: actions/checkout@v2
 
-      - uses: actions/checkout@v4
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.12' # Vervang dit door de Python-versie die je gebruikt
 
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
 
-
-      - name: Set up Python version
-
-        uses: actions/setup-python@v1
-
-        with:
-
-          python-version: '3.12'
-
-
-
-      - name: Create and start virtual environment
-
-        run: |
-
-          python -m venv venv
-
-          source venv/bin/activate
-
-      
-
-      - name: Install dependencies
-
-        run: pip install -r requirements.txt
-
-        
-
-      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
-
-
-
-      - name: Zip artifact for deployment
-
-        run: zip release.zip ./* -r
-
-
-
-      - name: Upload artifact for deployment jobs
-
-        uses: actions/upload-artifact@v3
-
-        with:
-
-          name: python-app
-
-          path: |
-
-            release.zip
-
-            !venv/
-
-
-
-  deploy:
-
-    runs-on: ubuntu-latest
-
-    needs: build
-
-    environment:
-
-      name: 'production'
-
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
-    permissions:
-      id-token: write #This is required for requesting the JWT
-
-
-    steps:
-
-      - name: Download artifact from build job
-
-        uses: actions/download-artifact@v3
-
-        with:
-
-          name: python-app
-
-
-
-      - name: Unzip artifact for deployment
-
-        run: unzip release.zip
-
-
-
-      
-      - name: Login to Azure
-        uses: azure/login@v1
-        with:
-          client-id: ${{ secrets.__clientidsecretname__ }}
-          tenant-id: ${{ secrets.__tenantidsecretname__ }}
-          subscription-id: ${{ secrets.__subscriptionidsecretname__ }}
-
-
-      - name: 'Deploy to Azure Web App'
-
-        uses: azure/webapps-deploy@v2
-
-        id: deploy-to-webapp
-
-        with:
-
-          app-name: 'bolcom'
-
-          slot-name: 'production'
+    - name: Deploy to Azure Web App
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: 'bolcom' # Vervang dit door de naam van je Azure Web App
+        # slot-name: 'production' # Als je geen deployment slot gebruikt, kan dit worden weggelaten
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }} # De publish profile moet worden ingesteld in je repository secrets
+        package: .
