--- a/hide_data.env
+++ b/hide_data.env
@@ -1,2 +1,2 @@
-EMAIL_SENDER ="cyberninjas020@gmail.com"
-EMAIL_PASSWORD ="txcmjzczlghszqwl"
+EMAIL_SENDER ="ENTER YOUR EMAIL"
+EMAIL_PASSWORD ="ENTER PASSWORD"
